WexGit/Wex_DX/force-app/main/default/objects/zqu__ProductRatePlan__c/fields/NonRecurringPaymentTerm__c.field-meta.xml
<CustomField>
    <fullName>NonRecurringPaymentTerm__c</fullName>
    <defaultValue>&quot;1&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Non Recurring Payment Term</label>
    <length>3</length>
    <type>Text</type>
</CustomField>