WexGit/Wex_DX/force-app/main/default/objects/zqu__ProductRatePlan__c/fields/ShippingVendor__c.field-meta.xml
<CustomField>
    <fullName>ShippingVendor__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Shipping Vendor</label>
    <length>255</length>
    <type>Text</type>
</CustomField>