WexGit/Wex_DX/force-app/main/default/objects/zqu__ProductRatePlan__c/fields/VendorProductName__c.field-meta.xml
<CustomField>
    <fullName>VendorProductName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Product Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>