WexGit/Wex_DX/force-app/main/default/objects/zqu__ProductRatePlan__c/fields/VendorProductOption__c.field-meta.xml
<CustomField>
    <fullName>VendorProductOption__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Vendor Product Option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>